--- a/fe_velvue/src/assets/layout/_menu.scss
+++ b/fe_velvue/src/assets/layout/_menu.scss
@@ -3,18 +3,18 @@
 .layout-sidebar {
   position: fixed;
   width: 20rem;
-  height: calc(100vh - 8rem);
+  height: 100vh;
   z-index: 999;
   overflow-y: auto;
   user-select: none;
-  top: 6rem;
-  left: 2rem;
+  top: 0;
+  left: 0;
   transition:
     transform var(--layout-section-transition-duration),
     left var(--layout-section-transition-duration);
   background-color: var(--surface-overlay);
-  border-radius: var(--content-border-radius);
-  padding: 0.5rem 1.5rem;
+  border-radius: 0;
+  padding: 0;
 }
 
 .layout-menu {
